compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
<!INCOMPATIBLE_MODIFIERS!>open<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}